# python-project-52

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
render/: views.py
render/templates/: basic.html
render/templates/render/: index.html
task_manager/: celery.py  middleware.py  settings.py  tests.py  urls.py  views.py
task_manager/api/: router.py  serializers.py  views.py
task_manager/fixtures/: label.json  status.json  user.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py
task_manager/statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_timestamp.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_remove_task_label_task_labels_alter_task_author_and_more.py  0002_remove_task_responsible_task_executor_and_more.py  0003_remove_task_responsible_task_executor.py  0003_rename_label_task_labels.py
task_manager/templates/: basic.html  index.html  login.html
task_manager/templates/error/: 404.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  models.py  tasks.py  tests.py  urls.py  views.py
templates/registration/: login.html
(+22 files in other folders)
